Reorganize project structure for better maintainability
- Organized RTL into core/, mmcm/, uart/ subdirectories
- Moved testbenches to tb/
- Moved constraints to constraints/
- Created scripts/ for vivado and python tools
- Updated all include paths for new structure
- Added comprehensive README with documentation
- Added Makefile for easy building
- Updated synthesis scripts for new paths

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ IceStick/arachne-pnr/
 IceStick/icestorm/
 IceStick/nextpnr/
 
+# Build directories
+build/
+scripts/vivado/build/
+scripts/vivado/.Xil/
+
 # Build outputs
 *.bit
 *.bin
