--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,14 @@ tight_setup_hold_pins.txt
 .vscode/
 .idea/
 *.code-workspace
+
+# KiCad
+*-backups/
+*.kicad_prl
+*.kicad_pcb-bak
+*.kicad_sch-bak
+*~*.kicad_pcb
+*~*.kicad_sch
+fp-info-cache
+*.bak
+\#auto_saved_files#
